CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET (EXECUTABLENAME InfoFunctionUsage)

SET (${EXECUTABLENAME}_SRCS 
	InfoFunctionUsage
	GCommandLineParser
)

ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)

INCLUDE_DIRECTORIES (AFTER
	${PROJECT_SOURCE_DIR}/examples/SampleIndividuals
	${PROJECT_SOURCE_DIR}/examples/SampleInfoFunctions
)

TARGET_LINK_LIBRARIES (${EXECUTABLENAME}
	${GENEVALIBNAME}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION examples/${EXECUTABLENAME}
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)
